--- a/packages/blitoadz-webapp/src/index.css
+++ b/packages/blitoadz-webapp/src/index.css
@@ -4,7 +4,7 @@ html {
 
 @supports (font-variation-settings: normal) {
   html {
-    font-family: "Inter var", "system-ui";
+    font-family: "Press Start 2P", "system-ui";
   }
 }
 
@@ -12,7 +12,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: white;
+  background: #fff4f4;
   color: black;
 }
 
